--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,109 +1,72 @@
-name: Build and Deploy
+name: Deploy SimpleTimeService
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
   workflow_dispatch:
     inputs:
       action:
-        description: 'Terraform action'
+        description: 'Action to perform'
         required: true
-        default: 'apply'
+        default: 'deploy'
         type: choice
         options:
-          - apply
-          - destroy
+        - deploy
+        - destroy
 
 env:
-  AWS_REGION: us-east-1
   DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/simpletimeservice
 
 jobs:
-  build:
-    name: Build and Push Docker Image
+  deploy:
     runs-on: ubuntu-latest
-    if: github.event.inputs.action != 'destroy'
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./app
-          push: ${{ github.event_name == 'push' }}
-          tags: |
-            ${{ env.DOCKER_IMAGE }}:latest
-            ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+    - name: Build and push Docker image
+      if: github.event.inputs.action == 'deploy'
+      run: |
+        cd app
+        docker build -t ${{ env.DOCKER_IMAGE }}:latest .
+        docker push ${{ env.DOCKER_IMAGE }}:latest
 
-  terraform:
-    name: Terraform
-    runs-on: ubuntu-latest
-    needs: build
-    if: |
-      always() && 
-      (github.event_name == 'push' || github.event.inputs.action == 'apply' || github.event.inputs.action == 'destroy')
-    
-    defaults:
-      run:
-        working-directory: terraform
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.0.0
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+    - name: Terraform Init
+      run: |
+        cd terraform
+        terraform init
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.0
+    - name: Terraform Plan
+      if: github.event.inputs.action == 'deploy'
+      run: |
+        cd terraform
+        terraform plan -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
 
-      - name: Terraform Init
-        run: terraform init
+    - name: Terraform Apply
+      if: github.event.inputs.action == 'deploy'
+      run: |
+        cd terraform
+        terraform apply -auto-approve -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
 
-      - name: Terraform Format Check
-        run: terraform fmt -check
-        continue-on-error: true
-
-      - name: Terraform Validate
-        run: terraform validate
-
-      - name: Terraform Plan
-        if: github.event.inputs.action != 'destroy'
-        run: terraform plan -var="container_image=${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
-
-      - name: Terraform Apply
-        if: github.event.inputs.action == 'apply' || (github.ref == 'refs/heads/main' && github.event_name == 'push')
-        run: terraform apply -auto-approve -var="container_image=${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
-
-      - name: Terraform Destroy
-        if: github.event.inputs.action == 'destroy'
-        run: terraform destroy -auto-approve -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
-
-      - name: Auto Destroy (Testing)
-        if: github.event.inputs.action == 'apply' && github.ref == 'refs/heads/main'
-        run: |
-          echo "Waiting 2 minutes to verify deployment..."
-          sleep 120
-          echo "Auto-destroying to avoid AWS charges..."
-          terraform destroy -auto-approve -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
+    - name: Terraform Destroy
+      if: github.event.inputs.action == 'destroy'
+      run: |
+        cd terraform
+        terraform destroy -auto-approve -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
