--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,17 +2,17 @@ name: Deploy SimpleTimeService
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
     inputs:
       action:
-        description: 'Action to perform'
+        description: "Action to perform"
         required: true
-        default: 'deploy'
+        default: "deploy"
         type: choice
         options:
-        - deploy
-        - destroy
+          - deploy
+          - destroy
 
 env:
   DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/simpletimeservice
@@ -20,54 +20,54 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker image
-      run: |
-        cd app
-        docker build -t ${{ env.DOCKER_IMAGE }}:latest .
-        docker push ${{ env.DOCKER_IMAGE }}:latest
+      - name: Build and push Docker image
+        run: |
+          cd app
+          docker build -t ${{ env.DOCKER_IMAGE }}:latest .
+          docker push ${{ env.DOCKER_IMAGE }}:latest
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: 1.0.0
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.0.0
 
-    - name: Terraform Init
-      run: |
-        cd terraform
-        terraform init
+      - name: Terraform Init
+        run: |
+          cd terraform
+          terraform init
 
-    - name: Terraform Plan
-      if: github.event.inputs.action == 'deploy'
-      run: |
-        cd terraform
-        terraform plan -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
+      - name: Terraform Plan
 
-    - name: Terraform Apply
-      if: github.event.inputs.action == 'deploy'
-      run: |
-        cd terraform
-        terraform apply -auto-approve -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
+        run: |
+          cd terraform
+          terraform plan -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
 
-    - name: Terraform Destroy
-      if: github.event.inputs.action == 'destroy'
-      run: |
-        cd terraform
-        terraform destroy -auto-approve -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
+      - name: Terraform Apply
+        if: github.event.inputs.action == 'deploy'
+        run: |
+          cd terraform
+          terraform apply -auto-approve -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
+
+      - name: Terraform Destroy
+        if: github.event.inputs.action == 'destroy'
+        run: |
+          cd terraform
+          terraform destroy -auto-approve -var="container_image=${{ env.DOCKER_IMAGE }}:latest"
